# discovery-inception

./: .env.example  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
agent/: artifacts.py  atlan_client.py  atlan_context.py  cli.py  ingest.py  json_utils.py  orchestrator.py  schemas.py  server.py  state.py
claude-skill/: README.md  SKILL.md
demos/: closed-loop-sc.md  full-cycle-example.md
findings/: 01-architecture-comparison.md  02-v07-lazy-synthesis-and-free-form-output.md  03-v07-25-turn-validation.md  04-v07-deterministic-closeout.md  05-v08-probe-sharpener-and-tensions.md  06-cost-latency-and-deployment-modes.md  07-architecture-cheat-sheet.md  08-cheap-cascade-gpt4o-mini-doesnt-pan-out.md  09-iteration-receipts-from-atlan-se-copilot.md  10-runtime-portability-three-substrates.md  data-collection-roadmap.md
intake/: README.md  run.py  schemas.py
patterns/: README.md  SKILL.md  STYLE.md  _index.md  _log.md
plans/: 00-vision-and-glossary.md  01-architecture.md  02-intake-agent.md  03-stages-deep-dive.md  04-future-considerations.md  05-technical-thread-discovery.md  06-atlan-context-integration.md  07-patterns-knowledge-base.md  08-inception-agent.md  09-context-debt-migration-backlog.md  10-feedback-loop-and-knowledge-promotion.md
scripts/: compare_runs.py  role_to_prompt.py
skill/: README.md  manifest.yaml  orchestration.yaml
tests/: conftest.py  test_artifacts.py  test_call_step.py  test_checklist.py  test_curator_lint.py  test_inception_graph.py  test_inception_resume.py  test_json_utils.py  test_patterns_loader.py  (+4 more)
(+142 files in other folders)
