[project]
name = "discovery-inception"
version = "0.1.0"
description = "FDE-in-a-box: a chained-agent discovery system for AI use cases."
requires-python = ">=3.11,<3.14"
dependencies = [
    "openai>=1.50",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["intake", "agent"]
